--- a/scss/_body.scss
+++ b/scss/_body.scss
@@ -1,7 +1,7 @@
 body {
     background-color: $color-secundario;
     font-family: 'Josefin Slab', serif;
-    margin: 0rem;
+    margin: 0;
     width: 100%;
     color: $color-terciario;
 
