--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,3 +1,5 @@
 $color-primario: rgb(203, 126, 193);
 $color-secundario: rgb(118, 115, 111);
 $color-terciario: rgb(255, 255, 255);
+$margin: 0,5rem;
+$padding: 0,5rem;
