--- a/scss/_especificos.scss
+++ b/scss/_especificos.scss
@@ -1,6 +1,6 @@
 
 .icon {
-    margin: 0.5rem;
+    margin: $margin;
     height: 3rem;
     width: 3rem;
     transition-property: all;
@@ -13,7 +13,7 @@
     flex-direction: column;
     justify-content: center;
     max-width: 1320px;
-    padding-top: 1.5rem;
+    padding-top: $padding*6;
     padding-bottom: 1.5rem;
     margin: auto;
 }
@@ -56,10 +56,22 @@ div {
 }
 
 .form {
-    max-width: 900px !important;
+    max-width: 900px;
+    min-width: 250px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     margin: auto;
+}
+
+.boton {
+    background-color: $color-primario;
+    color: $color-terciario;
+    border-radius: 2px;
+    border-color: $color-terciario;
+    transition-property: all;
+    transition-duration: 100ms;
+    transition-timing-function: ease-in-out;
+
 }
