--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -10,7 +10,7 @@ footer {
     justify-content: space-between;
     
     p {
-        font-size: 1.6em;
+        font-size: $fuente*1.6;
         font-style: normal;
     }
 }
