--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -1,14 +1,14 @@
 main{
     margin-top: 110px;
-    margin-left: 1rem;
-    margin-right: 1rem;
-    margin-bottom: 1rem;
-    padding-bottom: 3rem;
+    margin-left: $margin/2;
+    margin-right: $margin/2;
+    margin-bottom: $margin/2;
+    padding-bottom: $padding/2;
     grid-area: main;
 }
 
 h2 {
-    margin: 2rem;
+    margin: $margin/2;
     padding: 0;
     text-align: center;
     position: relative;
@@ -17,7 +17,7 @@ h2 {
 p {
     padding: 0;
     margin: 0;
-    font-size: 1.8em;
+    font-size: $fuente*1.8;
     font-style: italic;
     font-weight:200;
     text-align:justify;
