--- a/scss/_mediaqueries.scss
+++ b/scss/_mediaqueries.scss
@@ -5,25 +5,25 @@
     }
     
     h1 {
-        font-size: 1rem;
+        font-size: $fuente;
     }
 
     footer {
         p {
-        font-size: 1em;   
+        font-size: $fuente;   
         flex-direction: column;
         align-items: center;
         }
     }
 
     .icon {
-        margin: 0.5rem;
+        margin: $margin/2;
         height: 1.5rem;
         width: 1.5rem;
     }
 
     .pintro {
-        margin: 1rem;
+        margin: $margin;
     }
 
     #flecha {
@@ -40,7 +40,7 @@
     
     footer { 
         p {
-        font-size: 1.3em;
+        font-size: $fuente*1.3;
 
         }
     }
