--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -3,7 +3,6 @@
 @import "header";
 @import "main";
 @import "footer";
-@import "especificos";
 @import "transiciones";
 @import "animaciones";
 @import "mediaqueries";
@@ -12,5 +11,6 @@
 // Editar y desagregar "_especificos"
 // Editar colores formulario "contactos"
 // Completar contenido
-// Resto de entrega
+// extend y mixins.
+// containter fluid carousell
 // nueva mediaquerie
