--- a/css/styles.css
+++ b/css/styles.css
@@ -44,19 +44,44 @@ main {
   grid-area: main; }
 
 h2 {
-  margin: 0.5rem;
-  padding: 0;
+  display: block;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
   text-align: center;
-  position: relative; }
+  position: relative;
+  font-weight: 600; }
 
-p {
+p, .pintro, .pdescription, #pensenanza {
   padding: 0;
-  margin: 0;
+  margin: 0; }
+
+.pintro {
+  margin: 1rem;
   font-size: 1.8rem;
+  font-style: normal;
+  font-weight: 400;
+  text-align: center;
+  max-width: 1320px; }
+
+.pdescription {
+  font-size: 1.5rem;
   font-style: italic;
   font-weight: 200;
   text-align: justify;
   justify-content: center; }
+
+#pensenanza {
+  padding-top: 2rem;
+  margin: auto; }
+
+.divintro {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  max-width: 1320px;
+  padding-top: 4rem;
+  padding-bottom: 2rem;
+  margin: auto; }
 
 .row {
   align-items: center; }
@@ -68,44 +93,6 @@ p {
 a {
   color: white;
   text-decoration: none; }
-
-footer {
-  background-image: "img/wave.svg";
-  grid-area: footer;
-  width: 100%;
-  max-width: 1320px;
-  margin: auto;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between; }
-  footer p {
-    font-size: 1.6rem;
-    font-style: normal; }
-
-.icon {
-  margin: 1rem;
-  height: 3rem;
-  width: 3rem;
-  transition-property: all;
-  transition-duration: 1s;
-  transition-timing-function: ease-in-out; }
-
-.intro {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  max-width: 1320px;
-  padding-top: 4rem;
-  padding-bottom: 3rem;
-  margin: auto; }
-
-div .pintro {
-  text-align: center;
-  margin: auto;
-  max-width: 1320px; }
-
-#pensenanza {
-  padding-top: 2rem; }
 
 #flecha {
   animation-name: giro-flecha;
@@ -146,6 +133,27 @@ div .pintro {
   transition-duration: 100ms;
   transition-timing-function: ease-in-out; }
 
+footer {
+  background-image: "img/wave.svg";
+  grid-area: footer;
+  width: 100%;
+  max-width: 1320px;
+  margin: auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between; }
+  footer p, footer .pintro, footer .pdescription, footer #pensenanza {
+    font-size: 1.4rem;
+    font-style: normal; }
+
+.icon {
+  margin: 1rem;
+  height: 3rem;
+  width: 3rem;
+  transition-property: all;
+  transition-duration: 1s;
+  transition-timing-function: ease-in-out; }
+
 .icon:hover {
   transform: rotateY(360deg); }
 
@@ -166,7 +174,7 @@ div .pintro {
     font-size: small; }
   h1 {
     font-size: 1rem; }
-  footer p {
+  footer p, footer .pintro, footer .pdescription, footer #pensenanza {
     font-size: 1rem;
     flex-direction: column;
     align-items: center; }
@@ -184,5 +192,5 @@ div .pintro {
     margin: auto; } }
 
 @media screen and (max-width: 992px) {
-  footer p {
+  footer p, footer .pintro, footer .pdescription, footer #pensenanza {
     font-size: 1.3rem; } }
