--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -1,9 +1,8 @@
 main{
-    margin-top: 110px;
-    margin-left: $margin/2;
-    margin-right: $margin/2;
-    margin-bottom: $margin/2;
-    padding-bottom: $padding/2;
+    padding-top: 110px;
+    padding-left: $padding/2;
+    padding-right: $padding/2;
+    padding-bottom: $padding*5;
     grid-area: main;
 }
 
