--- a/scss/_mediaqueries.scss
+++ b/scss/_mediaqueries.scss
@@ -1,4 +1,41 @@
 
+@media screen and (max-width: 375px) {
+    body {
+        font-size: $fuente*0.5;
+    }
+    
+    h1 {
+        font-size: $fuente*0.8;
+    }
+
+    footer {
+        flex-direction: column;
+        align-items: center;
+        p {
+        font-size: $fuente*0.4;   
+        }
+    }
+
+    .icon {
+        margin: $margin/2;
+        height: 1rem;
+        width: 1rem;
+    }
+
+    .pintro {
+        margin: $margin*0.5;
+    }
+
+    #flecha {
+        justify-items: center;
+        align-content: center;
+        justify-content: center;
+        align-self: center;
+        margin: auto;
+    }
+};
+
+
 @media screen and (max-width: 768px) {
     body {
         font-size: small;
@@ -40,7 +77,7 @@
     
     footer { 
         p {
-        font-size: $fuente*1.3;
+        font-size: $fuente*0.8;
 
         }
     }
