--- a/css/styles.css
+++ b/css/styles.css
@@ -198,10 +198,11 @@ footer {
     font-size: small; }
   h1 {
     font-size: 1rem; }
-  footer p, footer .pintro, footer .pdescription, footer #pensenanza {
-    font-size: 1rem;
+  footer {
     flex-direction: column;
     align-items: center; }
+    footer p, footer .pintro, footer .pdescription, footer #pensenanza {
+      font-size: 1rem; }
   .icon {
     margin: 0.5rem;
     height: 1.5rem;
