--- a/css/styles.css
+++ b/css/styles.css
@@ -35,6 +35,10 @@ h1 {
   font-weight: bold;
   color: white; }
 
+#logo {
+  width: 75px;
+  height: 75px; }
+
 main {
   padding-top: 110px;
   padding-left: 0.5rem;
@@ -171,10 +175,13 @@ footer {
     transform: rotate(0deg); } }
 
 @media screen and (max-width: 375px) {
-  body {
+  .pintro {
+    font-size: 0.5rem;
+    margin: 0.5rem; }
+  .pdescription {
     font-size: 0.5rem; }
   h1 {
-    font-size: 0.8rem; }
+    font-size: 0.5rem; }
   footer {
     flex-direction: column;
     align-items: center; }
@@ -184,8 +191,9 @@ footer {
     margin: 0.5rem;
     height: 1rem;
     width: 1rem; }
-  .pintro {
-    margin: 0.5rem; }
+  #logo {
+    width: 35px;
+    height: 35px; }
   #flecha {
     justify-items: center;
     align-content: center;
@@ -194,10 +202,16 @@ footer {
     margin: auto; } }
 
 @media screen and (max-width: 768px) {
-  body {
-    font-size: small; }
+  .pintro {
+    font-size: 1.5rem;
+    margin: 1rem; }
+  .pdescription {
+    font-size: 1.5rem; }
   h1 {
     font-size: 1rem; }
+  #logo {
+    width: 55px;
+    height: 55px; }
   footer {
     flex-direction: column;
     align-items: center; }
@@ -207,8 +221,6 @@ footer {
     margin: 0.5rem;
     height: 1.5rem;
     width: 1.5rem; }
-  .pintro {
-    margin: 1rem; }
   #flecha {
     justify-items: center;
     align-content: center;
