--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -23,18 +23,14 @@ p {
 .pintro {
     @extend p;
     margin: $margin;
-    font-size: $fuente*1.8;
-    font-style: normal;
-    font-weight: 400;
+    @include fuente($fuente*1.8, normal, 400)
     text-align: center;
     max-width: 1320px;
 }
     
 .pdescription {
     @extend p;
-    font-size: $fuente*1.5;
-    font-style: italic;
-    font-weight: 200;
+    @include fuente($fuente*1.5, italic, 200)
     text-align:justify;
     justify-content: center;
     }
