--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -9,9 +9,7 @@
 @import "mediaqueries";
 
 
-// Editar y desagregar "_especificos"
+// seo
 // Editar colores formulario "contactos"
 // Completar contenido
-// extend y mixins.
 // containter fluid carousell
-// nueva mediaquerie
