--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -9,6 +9,7 @@ footer {
     flex-direction: row;
     justify-content: space-between;
     align-content: center;
+    align-items: center;
     
     
     p {
