--- a/scss/_mediaqueries.scss
+++ b/scss/_mediaqueries.scss
@@ -17,7 +17,8 @@
         flex-direction: column;
         align-items: center;
         p {
-        font-size: $fuente*0.4;   
+        font-size: $fuente*0.4;
+        text-align: center;
         }
     }
 
@@ -66,6 +67,7 @@
         align-items: center;
         p {
         font-size: $fuente;   
+        text-align: center;
         }
     }
 
