--- a/css/styles.css
+++ b/css/styles.css
@@ -118,8 +118,9 @@ a {
   transition-duration: 1s;
   transition-timing-function: ease-in-out;
   animation-name: giro-flecha;
+  animation-delay: 2s;
   margin-top: 1rem;
-  animation-duration: 2s;
+  animation-duration: 1s;
   animation-iteration-count: 1; }
 
 .form {
@@ -156,19 +157,50 @@ footer {
     font-style: normal;
     display: block; }
 
-.icon {
+.icon, #linkedin, #instagram, #facebook, #whatsapp {
   margin: 1rem;
   height: 3rem;
-  width: 3rem;
+  width: 3rem; }
+
+#linkedin {
   transition-property: all;
-  transition-duration: 1s;
+  transition-duration: 300ms;
   transition-timing-function: ease-in-out; }
 
-.icon:hover {
-  transform: rotateY(360deg); }
+#instagram {
+  transition-property: all;
+  transition-duration: 300ms;
+  transition-timing-function: ease-in-out; }
+
+#facebook {
+  transition-property: all;
+  transition-duration: 300ms;
+  transition-timing-function: ease-in-out; }
+
+#whatsapp {
+  transition-property: all;
+  transition-duration: 300ms;
+  transition-timing-function: ease-in-out; }
+
+#linkedin:hover {
+  transform: translate(0, -2px);
+  color: #0073b1; }
+
+#facebook:hover {
+  transform: translate(0, -2px);
+  color: #1877f2; }
+
+#instagram:hover {
+  transform: translate(0, -2px);
+  color: #D43089; }
+
+#whatsapp:hover {
+  transform: translate(0, -2px);
+  color: #43d854; }
 
 #wa1:hover {
-  transform: rotateY(360deg); }
+  transform: rotateY(360deg);
+  color: #43d854; }
 
 .boton:hover {
   transform: translate(0, 2px); }
@@ -193,13 +225,13 @@ footer {
     footer p, footer .pintro, footer .pdescription, footer #pensenanza {
       font-size: 0.4rem;
       text-align: center; }
-  .icon {
+  .icon, #linkedin, #instagram, #facebook, #whatsapp {
     margin: 0.5rem;
     height: 1rem;
     width: 1rem; }
   #logo {
-    width: 35px;
-    height: 35px; }
+    height: 35px;
+    width: 35px; }
   #flecha {
     justify-items: center;
     align-content: center;
@@ -224,7 +256,7 @@ footer {
     footer p, footer .pintro, footer .pdescription, footer #pensenanza {
       font-size: 1rem;
       text-align: center; }
-  .icon {
+  .icon, #linkedin, #instagram, #facebook, #whatsapp {
     margin: 0.5rem;
     height: 1.5rem;
     width: 1.5rem; }
