--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -10,8 +10,7 @@ footer {
     justify-content: space-between;
     align-content: center;
     align-items: center;
-    
-    
+        
     p {
         font-size: $fuente;
         font-style: normal;
@@ -22,7 +21,30 @@ footer {
 .icon {
     margin: $margin;
     @include size-element(3rem, 3rem);
+}
+
+#linkedin {
+    @extend .icon;
     transition-property: all;
-    transition-duration: 1s;
+    transition-duration: 300ms;
+    transition-timing-function: ease-in-out;
+    }
+
+#instagram {
+    @extend .icon;
+    transition-property: all;
+    transition-duration: 300ms;
+    transition-timing-function: ease-in-out;
+    }
+#facebook {
+    @extend .icon;
+    transition-property: all;
+    transition-duration: 300ms;
+    transition-timing-function: ease-in-out;
+    }
+#whatsapp {
+    @extend .icon;
+    transition-property: all;
+    transition-duration: 300ms;
     transition-timing-function: ease-in-out;
 }
