--- a/scss/_animaciones.scss
+++ b/scss/_animaciones.scss
@@ -7,3 +7,12 @@
         transform: rotate(0deg);
     }
 }
+
+@keyframes ingreso {
+    0% {
+        transform: translate(0, 20px);
+    }
+    100% {
+        transform: translate(0, 0);
+    }
+}
