--- a/scss/_mediaqueries.scss
+++ b/scss/_mediaqueries.scss
@@ -13,6 +13,10 @@
         font-size: $fuente*0.5;
     }
 
+    hr {
+        display: inline;
+    }
+
     footer {
         flex-direction: column;
         align-items: center;
@@ -55,6 +59,10 @@
         font-size: $fuente;
     }
 
+    hr {
+        display: inline;
+    }
+
     #logo {
         width: 55px; 
         height: 55px;
@@ -85,11 +93,13 @@
 };
 
 @media screen and (max-width: 992px) {
-
+    hr {
+        display: inline;
+    }
     footer { 
         p {
         font-size: $fuente*0.8;
-
         }
+
     }
 };
