--- a/css/styles.css
+++ b/css/styles.css
@@ -96,14 +96,14 @@ p, .pintro, .pdescription, #pensenanza {
   max-width: 1320px;
   margin: auto;
   animation-name: ingreso;
-  animation-duration: 1600ms;
+  animation-duration: 800ms;
   animation-iteration-count: 1; }
 
 .multimedia {
   height: 100%;
   width: 100%;
   animation-name: ingreso;
-  animation-duration: 1600ms;
+  animation-duration: 800ms;
   animation-iteration-count: 1; }
 
 a {
@@ -112,6 +112,7 @@ a {
 
 #flecha {
   animation-name: giro-flecha;
+  display: block;
   animation-duration: 3s;
   animation-iteration-count: infinite; }
 
@@ -121,8 +122,11 @@ a {
 .col-md-2 {
   padding: 6%; }
 
-#wa1 {
+.wa1 {
   margin: auto;
+  height: 65px;
+  width: 65px;
+  display: block;
   transition-property: all;
   transition-duration: 1s;
   transition-timing-function: ease-in-out;
@@ -141,7 +145,7 @@ a {
   justify-content: center;
   margin: auto;
   animation-name: ingreso;
-  animation-duration: 1600ms;
+  animation-duration: 800ms;
   animation-iteration-count: 1; }
 
 .boton {
