--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -62,14 +62,14 @@ p {
     max-width: 1320px;
     margin: auto;
     animation-name: ingreso;
-    animation-duration: 1600ms;
+    animation-duration: 800ms;
     animation-iteration-count: 1;
 }
 
 .multimedia {
     @include size-element(100%, 100%);
     animation-name: ingreso;
-    animation-duration: 1600ms;
+    animation-duration: 800ms;
     animation-iteration-count: 1;
 }
 
@@ -80,6 +80,7 @@ a {
 
 #flecha {
     animation-name: giro-flecha;
+    display: block;
     animation-duration: 3s;
     animation-iteration-count: infinite;
     
@@ -93,8 +94,10 @@ a {
     padding: 6%;
 }
 
-#wa1 {
+.wa1 {
     margin: auto;
+    @include size-element (65px, 65px);
+    display: block;
     transition-property: all;
     transition-duration: 1s;
     transition-timing-function: ease-in-out;
@@ -114,7 +117,7 @@ a {
     justify-content: center;
     margin: auto;
     animation-name: ingreso;
-    animation-duration: 1600ms;
+    animation-duration: 800ms;
     animation-iteration-count: 1;
     
 }
