--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -18,6 +18,7 @@ h2 {
 p {
     border: none;
     text-decoration: none;
+    max-width: 1320px;
     animation-name: ingreso;
     animation-duration: 800ms;
     animation-iteration-count: 1;
@@ -26,9 +27,9 @@ p {
 .pintro {
     @extend p;
     @include font($fuente*1.8, normal, 400);
-    margin: $margin;
+    margin: auto;
     text-align: center;
-    max-width: 1320px;
+    
 }
     
 .pdescription {
@@ -41,6 +42,7 @@ p {
 #pensenanza {
     @extend p;
     padding-top: $padding*2;
+    padding-bottom: $padding*1;
     margin: auto;
 }
 
