--- a/css/styles.css
+++ b/css/styles.css
@@ -44,6 +44,9 @@ main {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
   padding-bottom: 5rem;
+  animation-name: ingreso;
+  animation-duration: 800ms;
+  animation-iteration-count: 1;
   grid-area: main; }
 
 h2 {
@@ -57,10 +60,7 @@ h2 {
 p, .pintro, .pdescription, #pensenanza {
   border: none;
   text-decoration: none;
-  max-width: 1320px;
-  animation-name: ingreso;
-  animation-duration: 800ms;
-  animation-iteration-count: 1; }
+  max-width: 1320px; }
 
 .pintro {
   font-size: 1.8rem;
@@ -95,17 +95,11 @@ p, .pintro, .pdescription, #pensenanza {
 
 .carousel {
   max-width: 1320px;
-  margin: auto;
-  animation-name: ingreso;
-  animation-duration: 800ms;
-  animation-iteration-count: 1; }
+  margin: auto; }
 
 .multimedia {
   height: 100%;
-  width: 100%;
-  animation-name: ingreso;
-  animation-duration: 800ms;
-  animation-iteration-count: 1; }
+  width: 100%; }
 
 a {
   color: white;
@@ -144,10 +138,7 @@ a {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin: auto;
-  animation-name: ingreso;
-  animation-duration: 800ms;
-  animation-iteration-count: 1; }
+  margin: auto; }
 
 .boton {
   background-color: #cb7ec1;
@@ -172,10 +163,20 @@ footer {
   justify-content: space-between;
   align-content: center;
   align-items: center; }
-  footer p, footer .pintro, footer .pdescription, footer #pensenanza {
-    font-size: 1rem;
-    font-style: normal;
-    display: block; }
+  footer #footer-marca {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    align-content: center; }
+    footer #footer-marca #logo-footer {
+      height: 3rem;
+      width: 3rem;
+      margin-right: 1rem; }
+    footer #footer-marca p, footer #footer-marca .pintro, footer #footer-marca .pdescription, footer #footer-marca #pensenanza {
+      font-size: 1rem;
+      font-style: normal;
+      display: block;
+      align-self: center; }
 
 .icon {
   margin: 1rem;
