--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -11,11 +11,25 @@ footer {
     align-content: center;
     align-items: center;
         
-    p {
-        font-size: $fuente;
-        font-style: normal;
-        display: block;
+    #footer-marca {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        align-content: center;
+        
+        #logo-footer {
+            @include size-element(3rem, 3rem);
+            margin-right: $margin;
+        }
+        p {
+            font-size: $fuente;
+            font-style: normal;
+            display: block;
+            align-self: center;
+            
+        }
     }
+ 
 }
 
 .icon {
