--- a/css/styles.css
+++ b/css/styles.css
@@ -153,7 +153,6 @@ hr {
   display: none; }
 
 footer {
-  background-image: "img/wave.svg";
   grid-area: footer;
   width: 100%;
   max-width: 1320px;
@@ -172,19 +171,13 @@ footer {
       height: 3rem;
       width: 3rem;
       margin-right: 1rem; }
-    footer #footer-marca p, footer #footer-marca .pintro, footer #footer-marca .pdescription, footer #footer-marca #pensenanza {
-      font-size: 1rem;
-      font-style: normal;
-      display: block;
-      align-self: center; }
-
-.icon {
-  margin: 1rem;
-  height: 3rem;
-  width: 3rem;
-  transition-property: all;
-  transition-duration: 300ms;
-  transition-timing-function: ease-in-out; }
+  footer .icon {
+    margin: 1rem;
+    height: 3rem;
+    width: 3rem;
+    transition-property: all;
+    transition-duration: 300ms;
+    transition-timing-function: ease-in-out; }
 
 #linkedin:hover {
   transform: translate(0, -2px);
@@ -193,10 +186,6 @@ footer {
 #facebook:hover {
   transform: translate(0, -2px);
   color: #1877f2; }
-
-#instagram:hover {
-  transform: translate(0, -2px);
-  color: #D43089; }
 
 #whatsapp:hover {
   transform: translate(0, -2px);
@@ -233,14 +222,14 @@ footer {
     display: inline; }
   footer {
     flex-direction: column;
-    align-items: center; }
-    footer p, footer .pintro, footer .pdescription, footer #pensenanza {
-      font-size: 0.4rem;
-      text-align: center; }
-  .icon {
-    margin: 0.5rem;
-    height: 1rem;
-    width: 1rem; }
+    align-items: center;
+    margin-top: 2rem; }
+    footer .social {
+      margin-top: 1rem; }
+      footer .social .icon {
+        margin: 0.5rem;
+        height: 2rem;
+        width: 2rem; }
   #logo {
     height: 35px;
     width: 35px; }
@@ -266,14 +255,14 @@ footer {
     height: 55px; }
   footer {
     flex-direction: column;
-    align-items: center; }
-    footer p, footer .pintro, footer .pdescription, footer #pensenanza {
-      font-size: 1rem;
-      text-align: center; }
-  .icon {
-    margin: 0.5rem;
-    height: 1.5rem;
-    width: 1.5rem; }
+    align-items: center;
+    margin-top: 2rem; }
+    footer .social {
+      margin-top: 1rem; }
+      footer .social .icon {
+        margin: 0.5rem;
+        height: 3rem;
+        width: 3rem; }
   #flecha {
     justify-items: center;
     align-content: center;
@@ -283,6 +272,4 @@ footer {
 
 @media screen and (max-width: 992px) {
   hr {
-    display: inline; }
-  footer p, footer .pintro, footer .pdescription, footer #pensenanza {
-    font-size: 0.8rem; } }
+    display: inline; } }
