--- a/scss/_mediaqueries.scss
+++ b/scss/_mediaqueries.scss
@@ -20,15 +20,15 @@
     footer {
         flex-direction: column;
         align-items: center;
-        p {
-        font-size: $fuente*0.4;
-        text-align: center;
+        margin-top: $margin*2;
+        .social {
+            margin-top: $margin;
+            .icon {
+            margin: $margin/2;
+            @include size-element(2rem, 2rem);
+            }
         }
-    }
 
-    .icon {
-        margin: $margin/2;
-        @include size-element(1rem, 1rem);
     }
 
     #logo {
@@ -71,16 +71,15 @@
     footer {
         flex-direction: column;
         align-items: center;
-        p {
-        font-size: $fuente;   
-        text-align: center;
+        margin-top: $margin*2;
+        .social {
+            margin-top: $margin;
+            .icon {
+            margin: $margin/2;
+            @include size-element(3rem, 3rem);
+            }
         }
-    }
 
-    .icon {
-        margin: $margin/2;
-        height: 1.5rem;
-        width: 1.5rem;
     }
 
     #flecha {
@@ -96,10 +95,5 @@
     hr {
         display: inline;
     }
-    footer { 
-        p {
-        font-size: $fuente*0.8;
-        }
 
-    }
 };
