--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -3,6 +3,11 @@ header {
     background-color: $color-secundario;
 }
 
+#marca {
+    display: flex;
+    align-items: center;
+}
+
 h1 {
     font-size: $fuente*1.8;
     margin: 0;
