--- a/scss/_mediaqueries.scss
+++ b/scss/_mediaqueries.scss
@@ -18,7 +18,7 @@
     }
 
     footer {
-        flex-direction: column;
+        flex-direction: column-reverse;
         align-items: center;
         margin-top: $margin*2;
         .social {
@@ -69,7 +69,7 @@
     }
 
     footer {
-        flex-direction: column;
+        flex-direction: column-reverse;
         align-items: center;
         margin-top: $margin*2;
         .social {
