--- a/css/styles.css
+++ b/css/styles.css
@@ -229,7 +229,8 @@ footer {
     align-items: center;
     margin-top: 2rem; }
     footer .social {
-      margin-top: 1rem; }
+      margin-top: 0.5rem;
+      margin-bottom: 0.5rem; }
       footer .social .icon {
         margin: 0.5rem;
         height: 2rem;
@@ -260,9 +261,10 @@ footer {
   footer {
     flex-direction: column-reverse;
     align-items: center;
-    margin-top: 2rem; }
+    margin-top: 1rem; }
     footer .social {
-      margin-top: 1rem; }
+      margin-top: 0.5rem;
+      margin-bottom: 0.5rem; }
       footer .social .icon {
         margin: 0.5rem;
         height: 3rem;
