--- a/css/styles.css
+++ b/css/styles.css
@@ -96,19 +96,8 @@ p, .pintro, .pdescription, #pensenanza {
 .grid1 {
   margin-top: 1rem;
   display: grid;
-  grid-template-areas: "superior" "centro" "inferior"; }
-
-.superior {
-  grid-area: superior; }
-
-.centro {
-  grid-area: centro;
-  display: flex;
-  flex-direction: row; }
-
-.inferior {
-  grid-area: inferior;
-  justify-self: start; }
+  grid-template-columns: repeat(2, 1fr);
+  gap: 3rem; }
 
 .multimedia {
   height: 100%;
