Mediaqueries, hover wa1 y contenido.

--- a/scss/_transiciones.scss
+++ b/scss/_transiciones.scss
@@ -12,8 +12,8 @@
     color: #43d854;
 }
   
-#wa1:hover {
-    transform: rotateY(360deg);
+.wa1:hover {
+    transform: translate(0, -4px);
     color: #43d854;
 }
  
