--- a/css/styles.css
+++ b/css/styles.css
@@ -125,17 +125,17 @@ a {
 
 .wa1 {
   margin: auto;
-  height: 65px;
-  width: 65px;
+  height: 5rem;
+  width: 5rem;
   display: block;
   transition-property: all;
-  transition-duration: 1s;
+  transition-duration: 300ms;
   transition-timing-function: ease-in-out;
   animation-name: giro-flecha;
   animation-delay: 2s;
-  margin-top: 1rem;
   animation-duration: 1s;
-  animation-iteration-count: 1; }
+  animation-iteration-count: 1;
+  margin-top: 1rem; }
 
 .form {
   max-width: 900px;
@@ -199,8 +199,8 @@ footer {
   transform: translate(0, -2px);
   color: #43d854; }
 
-#wa1:hover {
-  transform: rotateY(360deg);
+.wa1:hover {
+  transform: translate(0, -4px);
   color: #43d854; }
 
 .boton:hover {
