--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -99,16 +99,16 @@ a {
 
 .wa1 {
     margin: auto;
-    @include size-element (65px, 65px);
+    @include size-element (5rem, 5rem);
     display: block;
     transition-property: all;
-    transition-duration: 1s;
+    transition-duration: 300ms;
     transition-timing-function: ease-in-out;
     animation-name: giro-flecha;
     animation-delay: 2s;
-    margin-top: $margin;
     animation-duration: 1s;
     animation-iteration-count: 1;
+    margin-top: $margin;
 }
 
 .form {
