--- a/scss/_mediaqueries.scss
+++ b/scss/_mediaqueries.scss
@@ -1,5 +1,9 @@
 
 @media screen and (max-width: 375px) {
+    main{
+        padding-top: 60px; 
+    }
+
     .pintro {
         font-size: $fuente*0.5;
         margin: $margin*0.5;
@@ -51,6 +55,9 @@
 
 
 @media screen and (max-width: 768px) {
+    main{
+        padding-top: 60px; 
+    }
     .pintro {
         font-size: $fuente*1.5;
         margin: $margin;
