--- a/css/styles.css
+++ b/css/styles.css
@@ -220,7 +220,8 @@ footer {
 
 @media screen and (max-width: 375px) {
   main {
-    padding-top: 60px; }
+    padding-top: 5rem;
+    padding-bottom: 3rem; }
   .pintro {
     font-size: 0.5rem;
     margin: 0.5rem; }
@@ -256,7 +257,8 @@ footer {
 
 @media screen and (max-width: 768px) {
   main {
-    padding-top: 60px; }
+    padding-top: 5rem;
+    padding-bottom: 3rem; }
   .pintro {
     font-size: 1.5rem;
     margin: 1rem; }
