--- a/scss/_mediaqueries.scss
+++ b/scss/_mediaqueries.scss
@@ -1,7 +1,8 @@
 
 @media screen and (max-width: 375px) {
     main{
-        padding-top: 60px; 
+        padding-top: $padding*5; 
+        padding-bottom: $padding*3;
     }
 
     .pintro {
@@ -56,7 +57,8 @@
 
 @media screen and (max-width: 768px) {
     main{
-        padding-top: 60px; 
+        padding-top: $padding*5; 
+        padding-bottom: $padding*3;
     }
     .pintro {
         font-size: $fuente*1.5;
